# code-dna

./: .gitignore  README.md  TRAINING.md  benchmark.py  pyproject.toml  requirements-train.txt  requirements.txt  test.py  train.py
cli/: __init__.py  chat.py  cli.py  config.py  explain.py  generate.py  model.py  prompts.py  review.py
codedna/: __init__.py
codedna/analyzer/: __init__.py  ast_extractor.py  pattern_detector.py  quality_scorer.py  repo_scanner.py
codedna/cli/: __init__.py  config.py  main.py
codedna/cli/commands/: __init__.py  analyze.py  chat.py  dataset.py  eval.py  init.py  serve.py  train.py
codedna/dataset/: __init__.py  cleaner.py  formatter.py  mixer.py  public_loader.py
codedna/evaluator/: __init__.py  humaneval_runner.py  perplexity.py  report.py  style_scorer.py
codedna/server/: __init__.py  app.py  inference.py  playground.py
codedna/trainer/: __init__.py  checkpoints.py  lora_config.py  model_merge.py  training_loop.py
model/: benchmark.py  train.py
model/benchmark_results/: baseline_results.json  finetuned_results.json
model/checkpoints/final/: adapter_config.json  adapter_model.safetensors
scripts/: train_a100.sh
