[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codedna"
version = "0.1.0"
description = "CLI tool for extracting code patterns, building datasets, fine-tuning LoRA adapters, and serving a personal coding assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer[all]>=0.9",
  "rich>=13",
  "datasets>=2.18",
  "transformers>=4.40",
  "peft>=0.10",
  "trl>=0.8",
  "bitsandbytes>=0.43",
  "accelerate>=0.29",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "tree-sitter>=0.21",
  "evaluate>=0.4",
  "llama-cpp-python>=0.2",
  "human-eval>=1.0",
]

[project.scripts]
codedna = "codedna.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["codedna*"]
