[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyassist"
version = "0.1.0"
description = "Local Python code assistant for generation, explanation, review, and chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "transformers==5.5.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.3",
]

[project.scripts]
pyassist = "cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
